# projetSE

./: CMakeLists.txt  README.md  fifo.cpp  fifo.h  liste.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcte.cpp  pcte.h  pcter.cpp  pcter.h  priorite_avec_requisition.cpp  priorite_avec_requisition.h  priorite_sans_requisition.cpp  priorite_sans_requisition.h  processus.cpp  tourniquet.cpp  tourniquet.h
